--- a/SoftArch.Ui.Wpf/SoftArch.Ui.Wpf.csproj
+++ b/SoftArch.Ui.Wpf/SoftArch.Ui.Wpf.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -94,8 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="ViewModel\" />
+    <ProjectReference Include="..\SoftArch\SoftArch.csproj">
+      <Project>{e400bd3f-c802-4b48-9951-ce3f9ec67d38}</Project>
+      <Name>SoftArch</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
